--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PagingCaching</string>
+
+    <!-- BeerList -->
+    <string name="your_first_brewed_in">First brewed in %1$s</string>
 </resources>
